# tee-totalled

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
src/tee_totalled/: __init__.py  __main__.py  attestation.py  bot.py  config.py  game.py  histogram.py  llm.py  verification.py
